--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -81,3 +81,7 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr;
 }
 
+.Author:hover{
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+}
+
